--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
 
     <EditText
         android:id="@+id/number_phone"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
@@ -84,6 +85,7 @@
 
     <EditText
         android:id="@+id/user_name"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:layout_marginStart="32dp"
@@ -106,6 +108,7 @@
         android:id="@+id/verify_phone_code"
         android:layout_width="0dp"
         android:layout_height="43dp"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:layout_marginStart="60dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="60dp"
