--- a/app/src/main/res/layout/list_item_view_from.xml
+++ b/app/src/main/res/layout/list_item_view_from.xml
@@ -3,6 +3,7 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="3dp"
@@ -41,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
+        <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
             android:id="@+id/message_text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,6 +53,7 @@
             android:fontFamily="sans-serif"
             android:maxWidth="260dp"
             android:paddingLeft="10dp"
+            emojicon:emojiconSize="18sp"
             android:paddingBottom="5dp"
             android:text="варвр"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -62,7 +64,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-        </TextView>
+        </hani.momanii.supernova_emoji_library.Helper.EmojiconTextView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
