--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,8 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#424242</item>
         <item name="colorPrimaryDark">#424242</item>
-
         <item name="android:navigationBarColor">#444444</item>
-        <item name="android:windowBackground"></item>
+        <item name="android:windowBackground">@color/cardview_dark_background</item>
     </style>
 
 
