--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -12,7 +12,6 @@
     android:layout_marginBottom="3dp"
     android:background="@drawable/style_of_message"
     android:paddingBottom="3dp"
-
     >
 
     <TextView
@@ -49,18 +48,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
-        android:fontFamily="sans-serif"
+        android:layout_marginTop="3dp"
         android:autoLink="web"
-        emojicon:emojiconSize="18sp"
+        android:fontFamily="sans-serif"
         android:linksClickable="true"
         android:paddingRight="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#ffff"
         android:textColorLink="#7ACEF8"
-        android:textSize="14sp"
+        android:textSize="14.3sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/message_user">
+        app:layout_constraintTop_toBottomOf="@id/message_user"
+        emojicon:emojiconSize="17sp">
 
 
     </hani.momanii.supernova_emoji_library.Helper.EmojiconTextView>
