fix bags with  Authentication add function "change name"

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="Выход" app:showAsAction="never"
-        android:id="@+id/menu_sign_out"/>
+
     <item android:title=""
         android:id="@+id/menu_contacts"
         android:icon="@drawable/ic_search_white_24dp" app:showAsAction="always"></item>
+
+    <item
+        android:title="Изменить имя"
+        app:showAsAction="never"
+        android:id="@+id/menu_change_name"/>
+
+    <item android:title="Выход" app:showAsAction="never"
+        android:id="@+id/menu_sign_out"/>
 </menu>
