--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,8 +67,6 @@
         app:layout_constraintTop_toBottomOf="@id/number_phone" />
 
 
-
-
     <EditText
         android:id="@+id/verify_phone_code"
         android:layout_width="0dp"
@@ -102,4 +100,19 @@
         app:layout_constraintEnd_toEndOf="@+id/verify_phone_code"
         app:layout_constraintStart_toStartOf="@+id/verify_phone_code"
         app:layout_constraintTop_toBottomOf="@+id/verify_phone_code" />
+
+    <ProgressBar
+        android:id="@+id/login_progress_bar"
+        android:layout_width="47dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="1dp"
+        android:visibility="invisible"
+        android:theme="@style/CircularProgress"
+        app:layout_constraintBottom_toTopOf="@+id/verify_phone_code"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button">
+
+    </ProgressBar>
 </androidx.constraintlayout.widget.ConstraintLayout>
