--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">#424242</item>
         <item name="android:navigationBarColor">#444444</item>
         <item name="android:windowBackground">@color/cardview_dark_background</item>
+        <item name="actionModeBackground">@color/activityBgdColor</item>
     </style>
 
 <style name="CircularProgress" parent="Theme.Design.Light">
