--- a/app/src/main/res/layout/activity_add_name_user.xml
+++ b/app/src/main/res/layout/activity_add_name_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNameUserActivity">
+    tools:context=".view.AddNameUserActivity">
 
     <TextView
         android:id="@+id/textView"
