--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activityBgdColor"
-    tools:context=".ContactsActivity">
+    tools:context=".view.ContactsActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_contacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#242424"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
