--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".view.MainActivity"
     android:background="@color/activityBgdColor"
     android:id="@+id/main_activity">
 
@@ -12,6 +12,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/latest_mes_recyclerview"
         android:layout_width="match_parent"
+    android:background="#242424"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
