--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#1B31D8</color>
-    <color name="activityBgdColor">#2C2C2C</color>
+    <color name="activityBgdColor">#2A2A2A</color>
 
 </resources>
